k8s/graphmarket.yml
# TODO Aggiungi namespace
# TODO health check

#
# SECRET
#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: localhost:5000/database
          ports:
            - containerPort: 5432
          #volumeMounts:
          #  - mountPath: /var/lib/postgresql/data
          #    name: database-pv-claim
          resources:
            limits:
              memory: 1Gi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.25"
      #volumes:
      #  - name: database-pv-claim
      #    persistentVolumeClaim:
      #      claimName: database-pv-claim

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: localhost:5000/gateway
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 1Gi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.25"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-products-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-products
  template:
    metadata:
      labels:
        app: service-products
    spec:
      containers:
        - name: service-products
          image: localhost:5000/service-products
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 1Gi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.25"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-reviews-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-reviews
  template:
    metadata:
      labels:
        app: service-reviews
    spec:
      containers:
        - name: service-reviews
          image: localhost:5000/service-reviews
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 1Gi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.25"

#
# SERVICE
#
---
apiVersion: v1
kind: Service
metadata:
  name: database-svc
spec:
  type: ClusterIP
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-svc
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 80

---
apiVersion: v1
kind: Service
metadata:
  name: service-products-svc
spec:
  type: ClusterIP
  selector:
    app: service-products
  ports:
    - protocol: TCP
      port: 80

---
apiVersion: v1
kind: Service
metadata:
  name: service-reviews-svc
spec:
  type: ClusterIP
  selector:
    app: service-reviews
  ports:
    - protocol: TCP
      port: 80

#
# INGRESS
#
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
spec:
  rules:
    - http:
        paths:
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: gateway-svc
                port:
                  number: 80
